k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-api-server
spec:
  selector:
    app: hello-api
  type: ClusterIP
  ports:
    - name: hello-api-server
      port: 80
      targetPort: 5001
      protocol: TCP
