k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-api-service
  namespace: default
spec:
  ingressClassName: ngrok
  rules:
  - host: pro-chow-solely.ngrok-free.app
    http:
      paths:
      - path: /hello-api
        pathType: Prefix
        backend:
          service:
            name: hello-api-service
            port:
              number: 80
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
